# swc-experimental

./: .gitattributes  .gitignore  .rustfmt.toml  .taplo.toml  Cargo.toml  README.md  profile.json
.agent/skills/port-swc-pr/: SKILL.md
.github/workflows/: CI.yml  codpeed.yml  cospeed.yml
crates/rspack_experimental_swc_ast_macros/: Cargo.toml
crates/rspack_experimental_swc_ast_macros/src/: ast.rs  lib.rs
crates/rspack_experimental_swc_ecma_ast/: Cargo.toml
crates/rspack_experimental_swc_ecma_ast/src/: ast.rs  lib.rs  node_id.rs
crates/rspack_experimental_swc_ecma_ast/src/ast/: ident.rs  lit.rs  module.rs  module_decl.rs
crates/swc_ast_macros/: Cargo.toml
crates/swc_ast_macros/src/: ast.rs
crates/swc_ecma_ast/: Cargo.toml
crates/swc_ecma_ast/src/: ast.rs  ast_list.rs  common.rs  lib.rs  string_allocator.rs  visit.rs
crates/swc_ecma_ast/src/ast/: class.rs  decl.rs  expr.rs  function.rs  ident.rs  lit.rs  module.rs  module_decl.rs  operator.rs  prop.rs  stmt.rs
crates/swc_ecma_ast/src/atom/: mod.rs  string_allocator.rs  utf8.rs  wtf8.rs
crates/swc_ecma_ast/src/derive/: clone_in.rs  mod.rs  span.rs
crates/swc_ecma_ast/src/node_id/: atom.rs  extra_data.rs  mod.rs  node.rs  raw.rs  sub_range.rs  typed.rs  utf8.rs  wtf8_atom.rs
crates/swc_ecma_ast_compat/: Cargo.toml
crates/swc_ecma_ast_compat/src/: lib.rs
crates/swc_ecma_parser/: Cargo.toml
crates/swc_ecma_parser/examples/: parse.rs
crates/swc_ecma_parser/src/: context.rs  error.rs  lib.rs  string_alloc.rs  syntax.rs
crates/swc_ecma_parser/src/lexer/: capturing.rs  char_ext.rs  comments_buffer.rs  mod.rs  number.rs  search.rs  source.rs  state.rs  string_builder.rs  table.rs  token.rs  whitespace.rs
crates/swc_ecma_parser/src/parser/: class_and_fn.rs  expr.rs  ident.rs  input.rs  jsx.rs  macros.rs  mod.rs  module_item.rs  object.rs  pat.rs  state.rs  stmt.rs  typescript.rs  util.rs
crates/swc_ecma_parser/src/parser/js/: class_and_fn.rs  expr.rs  ident.rs  module_item.rs  object.rs  pat.rs  stmt.rs
crates/swc_ecma_parser/src/parser/jsx/: mod.rs
crates/swc_ecma_parser/src/parser/ts/: mod.rs
crates/swc_ecma_semantic/: Cargo.toml
crates/swc_ecma_semantic/src/: lib.rs  node.rs
crates/swc_ecma_semantic/src/legacy/: mod.rs  resolver.rs  scope.rs  utils.rs
crates/swc_ecma_transforms_base/: Cargo.toml
crates/swc_ecma_transforms_base/src/: remove_paren.rs
crates/swc_ecma_utils/: Cargo.toml
crates/swc_ecma_utils/src/: lib.rs
crates/swc_ecma_visit/: Cargo.toml
crates/swc_ecma_visit/src/: lib.rs
docs/: FlatteningAST.md
scripts/: clone_fixtures.sh
tasks/ast_tools/: Cargo.toml
tasks/ast_tools/src/: main.rs  output.rs  parse.rs  schema.rs  util.rs
tasks/ast_tools/src/derive/: ast_clone_in.rs  ast_node_id.rs  mod.rs
tasks/ast_tools/src/generator/: ast_builder.rs  ast_extra_compact.rs  ast_property.rs  ast_visitor.rs  mod.rs
tasks/benchmark/: Cargo.toml
tasks/benchmark/benches/: ast_compat.rs  parser.rs  semantic.rs  semantic_compare.rs  transform.rs  visit.rs  visit_compare.rs
tasks/benchmark/examples/: ast_compat.rs  memory_hole.rs  opt_useless_node.rs  parse.rs  visit.rs
tasks/benchmark/examples/rspack_simulator/: experimental.rs  main.rs
tasks/testsuite/: Cargo.toml
tasks/testsuite/fixtures/misc-parser/fail/: bigint-sep-start.js
tasks/testsuite/fixtures/misc-parser/pass/: experimental-utf8-in-template.js
tasks/testsuite/fixtures/parser-misc/fail/: stmt-await-as-ident.js  stmt-await-in-function.js  stmt-class-static-blocks-in-ts-with-invalid-modifier-1.ts  stmt-class-static-blocks-in-ts-with-invalid-modifier-2.ts  stmt-class-static-blocks-in-ts-with-invalid-modifier-3.ts  stmt-class-static-blocks-in-ts-with-invalid-modifier-4.ts  stmt-class-static-blocks-with-await.js  stmt-error-for-string-literal-is-export-binding.js  stmt-error-for-string-literal-is-import-binding.js  stmt-issue-4369-1.js  stmt-ts-error-for-const-declaration-not-initialized.ts  tests-illegal-language-mode-directive1.js  tests-illegal-language-mode-directive2.js
tasks/testsuite/fixtures/parser-misc/pass/: array-binding-pattern-assign.js  array-binding-pattern-tail-inside-tail.js  array-binding-pattern-tail-with-elems.js  array-binding-pattern-tail.js  array-pat-empty-end.js  array-pat-empty-start.js  array-pat-empty.js  array-pat-simple.js  module-item-test-legacy-decorator.js  object-binding-pattern-with-prop-and-label.js  object-binding-pattern-with-prop.js  stmt-await-as-ident-in-script.cjs  stmt-await-as-param-ident-in-script.js  stmt-await-for-of.js  stmt-await-in-nested-async-function-in-script.cjs  stmt-catch-rest-pat.js  stmt-class-static-blocks-in-ts.ts  stmt-class-static-blocks-with-await-in-fn.js  stmt-class-static-blocks-with-line-breaks-in-ts-01.ts  stmt-class-static-blocks-with-line-breaks-in-ts-02.ts  stmt-example.tsx  stmt-export-default-2.js  stmt-export-default-3.js  stmt-export-default-4.js  stmt-export-default.js  stmt-for-array-binding-pattern.js  stmt-for-head-init-async-of.js  stmt-for-object-binding-pattern.js  stmt-for-of-head-lhs-async-dot.js  stmt-ice.tsx  stmt-if-else.js  stmt-import-meta-in-program.js  stmt-issue-10797-0.ts  stmt-issue-10797-1.ts  stmt-issue-257-let.js  stmt-issue-257-var.js  stmt-issue-269.js  stmt-issue-319-2.js  stmt-issue-340-async-fn.js  stmt-issue-340-generator-fn.js  (+60 more)
tasks/testsuite/snapshots/: no_memory_hole_test262.snap  parser_test262.snap  remove_paren_test262.snap
tasks/testsuite/src/: main.rs  suite.rs  util.rs
tasks/testsuite/src/cases/: misc.rs  mod.rs  test262.rs  test262_parser.rs
tasks/testsuite/src/misc/: parser.rs
tasks/testsuite/src/runner/: misc_parser.rs  mod.rs  no_memory_hole.rs  parser.rs  parser_misc.rs  parser_no_memory_hole.rs  parser_test262.rs  parser_test262_parser.rs  semantic.rs  test262_parser.rs  transform_remove_paren.rs
tasks/testsuite/src/test262_parser/: mod.rs
