[workspace]
members  = ["crates/*", "tasks/ast_tools", "tasks/benchmark", "tasks/testsuite"]
resolver = "2"

[workspace.dependencies]
bitflags         = "2"
either           = "1.10.0"
num-bigint       = "0.4.6"
oxc_index        = "4.1.0"
rustc-hash       = "2"
seq-macro        = "0.3.6"
smartstring      = "1.0.1"
stacker          = "0.1.15"
tracing          = "0.1.41"
unicode-id-start = "1.3.1"

# SWC
swc_atoms  = "8.0.2"
swc_common = "16.0.0"

# Ast tool
convert_case = "0.9.0"
indexmap     = "2.12.0"
phf          = "0.13.1"
prettyplease = "0.2"
proc-macro2  = "1"
quote        = "1"
syn          = { version = "2", default-features = false }

# Workspace
swc_experimental_ast_macros    = { path = "crates/swc_ast_macros" }
swc_experimental_ecma_ast      = { path = "crates/swc_ecma_ast" }
swc_experimental_ecma_parser   = { path = "crates/swc_ecma_parser" }
swc_experimental_ecma_semantic = { path = "crates/swc_ecma_semantic" }
swc_experimental_ecma_visit    = { path = "crates/swc_ecma_visit" }

# Dev
colored         = "3.0.0"
criterion       = "0.7.0"
mimalloc        = "0.1.48"
pico-args       = "0.5.0"
swc_ecma_ast    = "17.0.0"
swc_ecma_parser = "26.0.1"
swc_ecma_visit  = "17.0.0"

[profile.bench]
codegen-units = 1
debug         = true
lto           = "fat"
opt-level     = 3
panic         = "abort"
strip         = "none"
