[workspace]
members  = ["crates/*", "tasks/ast_tools", "tasks/benchmark", "tasks/testsuite"]
resolver = "3"

[workspace.package]
description = "An extensible Rust-based platform for the next generation of fast developer tools"
homepage    = "https://swc.rs/"
keywords    = ["JavaScript"]
license     = "Apache-2.0"
repository  = "https://github.com/CPunisher/swc-experimental"

[workspace.dependencies]
bitflags         = "2"
either           = "1.10.0"
indexmap         = "2.12.0"
num-bigint       = "0.4.6"
oxc_index        = "4.1.0"
rayon            = "1.11.0"
rustc-hash       = "2"
seq-macro        = "0.3.6"
smartstring      = "1.0.1"
stacker          = "0.1.22"
string-interner  = "0.19.0"
tracing          = "0.1.41"
unicode-id-start = "1.3.1"

# SWC
swc_core = { version = "55.0.0", features = [
    "swc_atoms",
    "ecma_ast",
    "__ecma",
    "__visit",
    "__common",
    "__parser",
    "__ecma_transforms",
] }

# Ast tool
convert_case = "0.9.0"
phf          = "0.13.1"
prettyplease = "0.2"
proc-macro2  = "1"
quote        = "1"
syn          = { version = "2", default-features = false }

# Workspace
swc_experimental_ast_macros           = { version = "0.4.0", path = "crates/swc_ast_macros" }
swc_experimental_ecma_ast             = { version = "0.4.0", path = "crates/swc_ecma_ast" }
swc_experimental_ecma_ast_compat      = { version = "0.4.0", path = "crates/swc_ecma_ast_compat" }
swc_experimental_ecma_parser          = { version = "0.4.0", path = "crates/swc_ecma_parser" }
swc_experimental_ecma_semantic        = { version = "0.4.0", path = "crates/swc_ecma_semantic" }
swc_experimental_ecma_transforms_base = { version = "0.4.0", path = "crates/swc_ecma_transforms_base" }
swc_experimental_ecma_visit           = { version = "0.4.0", path = "crates/swc_ecma_visit" }

# Dev
colored      = "3.0.0"
criterion    = { package = "codspeed-criterion-compat", version = "*" }
jwalk        = "0.6"
mimalloc     = "0.1.48"
pico-args    = "0.5.0"
saphyr       = "0.0.6"
tracy-client = { version = "=0.18.4", features = ["enable", "sampling", "demangle", "system-tracing"] }

[profile.bench]
codegen-units = 1
debug         = true
lto           = "fat"
opt-level     = 3
strip         = "none"
