[package]
edition = "2024"
name    = "rspack_experimental_swc_ast_macros"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true, features = ["full", "parsing", "printing", "proc-macro", "clone-impls"] }
