[package]
description.workspace = true
edition               = "2024"
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "swc_experimental_ast_macros"
repository.workspace  = true
version               = "0.5.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true, features = ["full", "parsing", "printing", "proc-macro", "clone-impls"] }
