[package]
edition = "2024"
name    = "swc_experimental_ecma_ast"
version = "0.1.0"

[dependencies]
cranelift-entity = { workspace = true }
num-bigint       = { workspace = true }
oxc_index        = { workspace = true }
swc_atoms        = { workspace = true }
swc_common       = { workspace = true }
unicode-id-start = { workspace = true }

swc_experimental_ast_macros = { workspace = true }
