[package]
description.workspace = true
edition               = "2024"
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "swc_experimental_ecma_ast"
repository.workspace  = true
version               = "0.3.5"

[dependencies]
num-bigint       = { workspace = true }
oxc_index        = { workspace = true }
swc_core         = { workspace = true }
unicode-id-start = { workspace = true }

swc_experimental_ast_macros = { workspace = true }
