[package]
description.workspace = true
edition               = "2024"
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "swc_experimental_ecma_parser"
repository.workspace  = true
version               = "0.3.5"

[features]
unstable = []

[dependencies]
bitflags    = { workspace = true }
either      = { workspace = true }
num-bigint  = { workspace = true }
rustc-hash  = { workspace = true }
seq-macro   = { workspace = true }
smartstring = { workspace = true }
swc_core    = { workspace = true }
tracing     = { workspace = true }

swc_experimental_ecma_ast = { workspace = true }
