[package]
edition = "2024"
name    = "swc_experimental_ecma_semantic"
version = "0.1.0"

[dependencies]
bitflags   = { workspace = true }
oxc_index  = { workspace = true }
rustc-hash = { workspace = true }

# For legacy
swc_common = { workspace = true }

swc_experimental_ecma_ast   = { workspace = true }
swc_experimental_ecma_visit = { workspace = true }
