[package]
description.workspace = true
edition               = "2024"
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "swc_experimental_ecma_semantic"
repository.workspace  = true
version               = "0.1.1"

[dependencies]
bitflags   = { workspace = true }
oxc_index  = { workspace = true }
rustc-hash = { workspace = true }

swc_experimental_ecma_ast   = { workspace = true }
swc_experimental_ecma_visit = { workspace = true }
