[package]
description.workspace = true
edition               = "2024"
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "swc_experimental_ecma_transforms_base"
repository.workspace  = true
version               = "0.3.4"

[dependencies]
indexmap   = { workspace = true }
rustc-hash = { workspace = true }
swc_core   = { workspace = true, features = ["__common"] }

swc_experimental_ecma_ast = { workspace = true }
