[package]
description.workspace = true
edition               = "2024"
homepage.workspace    = true
keywords.workspace    = true
license.workspace     = true
name                  = "swc_experimental_ecma_visit"
repository.workspace  = true
version               = "0.1.1"

[dependencies]
swc_experimental_ecma_ast = { workspace = true }
