[package]
edition = "2024"
name    = "ast_tools"
version = "0.1.0"

[features]
debug_drop = []

[dependencies]
phf          = { workspace = true, features = ["macros"] }
prettyplease = { workspace = true }
proc-macro2  = { workspace = true }
quote        = { workspace = true }
syn          = { workspace = true, features = ["full", "parsing", "printing", "proc-macro", "clone-impls"] }

convert_case = { workspace = true }
indexmap     = { workspace = true }
oxc_index    = { workspace = true }
