[package]
edition = "2024"
name    = "benchmark"
publish = false
version = "0.1.0"

[dev-dependencies]
swc_experimental_ecma_ast             = { workspace = true }
swc_experimental_ecma_ast_compat      = { workspace = true }
swc_experimental_ecma_parser          = { workspace = true, features = ["unstable"] }
swc_experimental_ecma_semantic        = { workspace = true }
swc_experimental_ecma_transforms_base = { workspace = true }
swc_experimental_ecma_visit           = { workspace = true }

criterion  = { workspace = true }
mimalloc   = { workspace = true }
rustc-hash = { workspace = true }
swc_core   = { workspace = true, features = ["ecma_parser_unstable"] }

[[bench]]
harness = false
name    = "parser"

[[bench]]
harness = false
name    = "visit_compare"

[[bench]]
harness = false
name    = "semantic"

[[bench]]
harness = false
name    = "ast_compat"

[[bench]]
harness = false
name    = "transform"
