[package]
edition = "2024"
name    = "testsuite"
version = "0.1.0"

[dependencies]
colored    = { workspace = true }
pico-args  = { workspace = true }
swc_common = { workspace = true }

swc_experimental_ecma_ast      = { workspace = true }
swc_experimental_ecma_parser   = { workspace = true }
swc_experimental_ecma_semantic = { workspace = true }
swc_experimental_ecma_visit    = { workspace = true }
