[package]
edition = "2024"
name    = "testsuite"
publish = false
version = "0.1.0"

[dependencies]
colored   = { workspace = true }
jwalk     = { workspace = true }
pico-args = { workspace = true }
rayon     = { workspace = true }
saphyr    = { workspace = true }
swc_core  = { workspace = true }

swc_experimental_ecma_ast             = { workspace = true }
swc_experimental_ecma_parser          = { workspace = true }
swc_experimental_ecma_semantic        = { workspace = true }
swc_experimental_ecma_transforms_base = { workspace = true }
